src/index.css
*{
  box-sizing: border-box;
}
html{
  height:100%;
}
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgba(5, 24, 33, 0.9);
  display:grid;
  grid-template-columns: 100%;
  grid-template-rows: auto auto auto;
  grid-template-areas: 'header'
                        'main' 
                        'footer';
                        height:100%;
  position:relative;
}

header{
  grid-area: header;
}

main{
  grid-area: main;
}

footer{
  position:absolute;
  bottom:0;
  width:100%;
  grid-area: footer;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

ul{
  list-style: none;
}

